Backend codes realated to customer

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://anuki:bc9PKSVEj8sa7SBg@cluster0.yf7v22e.mongodb.net/inventoryDB?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://anuki:bc9PKSVEj8sa7SBg@cluster0.yf7v22e.mongodb.net/techsl?retryWrites=true&w=majority&appName=Cluster0
+PORT=3001
