feat: backend-login-completed

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://anuki:bc9PKSVEj8sa7SBg@cluster0.yf7v22e.mongodb.net/techsl?retryWrites=true&w=majority&appName=Cluster0
 PORT=3001
+JWT_SECRET=myVerySecretKey
